dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=monetad.1
endif

if ENABLE_QT
  dist_man1_MANS+=moneta-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=moneta-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=moneta-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=moneta-wallet.1
endif
endif
